# Defense

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
proving_ground/: __init__.py  benchmark.py  cli.py  compare.py  ensemble.py  seeding.py  stats.py  video.py  viz.py
proving_ground/adapters/: __init__.py  base.py  fake.py  yolo.py  yolo_obb.py
proving_ground/attacks/: __init__.py  base.py  cw.py  degradation.py  eot_patch.py  fgsm.py  modality.py  patch.py  pgd.py  pgd_l2.py
proving_ground/data/: __init__.py  coco.py  loaders.py
proving_ground/data/fixtures/: annotations.json
proving_ground/data/fixtures/coco_sample/: SOURCE.md  annotations.json
proving_ground/data/fixtures/coco_scenes/: SOURCE.md  annotations.json
proving_ground/eval/: __init__.py  metrics.py  robustness.py
proving_ground/report/: __init__.py  generator.py  html.py  monitor.py  schema.py  tevv.py
tests/: _fakes.py  _snapshot_util.py  conftest.py  test_adapter_contract.py  test_benchmark_ci_snapshot.py  test_benchmark_snapshot.py  test_cli_smoke.py  test_coco.py  test_compare.py  test_cw.py  test_cw_snapshot.py  test_degradation.py  test_degradation_snapshot.py  test_ensemble.py  test_ensemble_snapshot.py  test_eot_patch.py  test_eot_patch_snapshot.py  test_fgsm.py  test_metrics.py  test_modality.py  test_modality_snapshot.py  test_monitor.py  test_patch.py  test_patch_snapshot.py  test_pgd_l2.py  test_pgd_l2_snapshot.py  test_pgd_linf.py  test_pgd_linf_snapshot.py  test_real_pipeline_snapshot.py  test_report.py  test_report_html.py  test_seeding.py  test_stats.py  test_tevv.py  test_video.py  test_viz.py  test_yolo_integration.py  test_yolo_obb.py  test_yolo_obb_integration.py
tests/baselines/: _regen.py  coco_sample_cw_l2_report.json  coco_sample_eot_patch_report.json  coco_sample_patch_report.json  coco_sample_pgd_l2_report.json  coco_sample_pgd_linf_report.json  coco_sample_report.json  coco_scenes_benchmark.json  coco_scenes_benchmark_ci.json  coco_scenes_degradation.json  coco_scenes_ensemble.json  coco_scenes_modality.json
tools/: fetch_coco_val.py  make_figures.py
