[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proving-ground"
version = "0.0.1"
description = "Robustness testing engine for object-detection models."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "torch",
    "torchvision",
    "ultralytics",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
proving-ground = "proving_ground.cli:main"

[tool.setuptools.packages.find]
include = ["proving_ground*"]

[tool.pytest.ini_options]
# Default run excludes the integration marker -> no weight downloads in `pytest -q`.
addopts = "-m 'not integration'"
markers = [
    "integration: needs real model weights; excluded from the default run",
    "slow: longer-running (real model forward/backward)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
