[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "proving-ground"
version = "0.0.1"
description = "Robustness testing engine for object-detection models."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Vittesh Maganti", email = "vittesh.ram.maganti@gmail.com" }]
keywords = ["adversarial", "robustness", "object-detection", "yolo", "security"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "opencv-python-headless",
    "torch",
    "torchvision",
    "ultralytics",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
proving-ground = "proving_ground.cli:main"

[tool.setuptools.packages.find]
include = ["proving_ground*"]

[tool.pytest.ini_options]
# Default run excludes the integration marker -> no weight downloads in `pytest -q`.
addopts = "-m 'not integration'"
markers = [
    "integration: needs real model weights; excluded from the default run",
    "slow: longer-running (real model forward/backward)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
